@@ -14,6 +14,7 @@ Version 2.1 (Batasu) August-2021:
 	* Script Manager [0.1.21] - added aircrack-ng! ready for test!
 	* Script Manager [0.1.22] - hakku framework ready for test
 	* Script Manager [0.1.23] - hakku framework fix [1]
+	* Script Manager [0.1.24] - weeman and aircrack-ng fix [1]
 	
 Version 2.0 (Batasu) July-2021:
 	* Separated script function from main script
